Thu Oct 27 12:13:40 UTC 2011  Simon Massey <sma at prismtech dot com>

        * tao/PI_Server/PI_Server_include.pidl:
        Was duplicating the tao/PortableServer/PortableServer_include.pidl
        #define guard name.

Tue Oct 25 08:10:00 UTC 2011  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * tests/POA/On_Demand_Act_Direct_Coll/Client_Task.cpp:
        Solved error in destroying the orb.

Fri Oct 21 14:44:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IORManipulation/IORManipulation.mpc:
        * tao/IORTable/IORTable.mpc:
        * tao/ZIOP/ZIOP.mpc:
          Generate export files as part of the build

        * tao/IORManipulation/ior_manip_export.h:
        * tao/IORTable/iortable_export.h:
        * tao/ZIOP/ziop_export.h:
          Removed these files.

        * tao/ZIOP/ZIOP.h:
          Doxygen fix

Thu Oct 20 17:34:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/POA/On_Demand_Act_Direct_Coll/On_Demand_Act_D_Coll.mpc:
          Don't build this test with minimum corba and CORBA/e

Thu Oct 20 12:50:09 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be_include/be_interface.h:
          Fixed gcc warning

Tue Oct 20 09:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Oct 20 08:42:33 UTC 2011  Marijke Hengstmengel  <hengstmengel_m@remedy.nl>

                * On_Demand_Act_Direct_Coll:
                * On_Demand_Act_Direct_Coll/Collocated_Test.cpp:
                * On_Demand_Act_Direct_Coll/Servant_Activator.cpp:
                * On_Demand_Act_Direct_Coll/test_i.cpp:
                * On_Demand_Act_Direct_Coll/Server_Task.h:
                * On_Demand_Act_Direct_Coll/run_test.pl:
                * On_Demand_Act_Direct_Coll/test_i.h:
                * On_Demand_Act_Direct_Coll/Client_Task.cpp:
                * On_Demand_Act_Direct_Coll/Server_Task.cpp: